# docs/swagger.json
@@ -43,16 +43,16 @@
                             "$ref": "#/definitions/password_http.LoginByEmailResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpx.ErrorResponse"
+                            "$ref": "#/definitions/password_http.LoginBadRequestError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpx.ErrorResponse"
+                            "$ref": "#/definitions/password_http.LoginInternalError"
                         }
                     }
                 }
@@ -123,6 +123,26 @@
                 }
             }
         },
+        "password_http.LoginBadRequestError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "enum": [
+                        "invalid_json",
+                        "email_required",
+                        "password_required",
+                        "invalid_email",
+                        "invalid_credentials"
+                    ],
+                    "example": "invalid_credentials"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "invalid email or password"
+                }
+            }
+        },
         "password_http.LoginByEmailRequest": {
             "type": "object",
             "properties": {
@@ -139,6 +159,22 @@
             "properties": {
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "password_http.LoginInternalError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "enum": [
+                        "internal_error"
+                    ],
+                    "example": "internal_error"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "internal error"
                 }
             }
         },
